tests/paczka1/small_fuzzy/13607173.err
Error in line 5: eIMUOWQw0YE S72 68,07
Error in line 2: OIUPQv S72 31,9
Error in line 8: DwLiM08LAt S157 67,23
